# roboscribe-af

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  helpers.py  main.py  pyproject.toml  requirements.txt
fixtures/real_pusht_frames/: GROUND_TRUTH.md
reasoners/: action.py  composer.py  corpus.py  dl.py  temporal.py  visual.py
scripts/: bench25.py  frame_eval.py  run_demo.sh  test_smart_fallback.py
src/roboscribe_af/: __init__.py  app.py  dl_store.py  helpers.py  schemas.py
src/roboscribe_af/reasoners/: __init__.py  action.py  composer.py  dl.py  smoke.py  temporal.py  visual.py
src/roboscribe_af/tasks/: __init__.py  aloha.py  pusht.py
tasks/: base.py  registry.py
